--- a/Helloworld/index.html
+++ b/Helloworld/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="app">
+    <div id="app1">
         {{ greeting }}
     </div>
-
+    <div id="app2">
+        {{ greeting }}
+    </div>
 
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
