update v-html directive added

--- a/directives/index.html
+++ b/directives/index.html
@@ -19,6 +19,14 @@
 
        <label>Last name:</label>
        <input v-model="lastName" type="text" />
+
+
+       <!--Reda Portfolio-->
+       
+       <!--v-bind  directive-->
+       <!--v-html directive-->
+       <p><a v-bind:href="url" target="_blank">Reda Hammada</a></p>
+       <p v-html="raw_url"></p>
        
 
     </div>
