--- a/directives/index.html
+++ b/directives/index.html
@@ -12,7 +12,7 @@
     <!--  directives  -->
     <div v-cloak id="app">
 
-       <p>{{ fullName() }}</p>
+       <p>{{ fullName }}</p>
 
 
 
@@ -26,7 +26,7 @@
        <p><a v-bind:href="url" target="_blank">Reda Hammada</a></p>
        <p v-html="raw_url"></p>
        <p>{{  occupation }}</p>
-       <p>{{  typeof age }}</p>
+       <p>{{   age }}</p>
 
 
         <hr />
