v-show directive added

--- a/class-style-binding/index.html
+++ b/class-style-binding/index.html
@@ -19,8 +19,8 @@
             <option value="text-orange">Orange</option>
         </select>
         <input type="number" value="{size}"  v-model="size" />
-        <div class="circle" :class="[selectedColor,circle_classes]"
-        :style="[{width:circle_style,height:circle_style,lineHeight:circle_style},{transform:'rotate(30deg)'}]">
+        <div class="circle" v-bind:class="[selectedColor,circle_classes]"
+        v-bind:style="[{width:circle_style,height:circle_style,lineHeight:circle_style},{transform:'rotate(30deg)'}]">
             Hallo!
         </div>
     </div>
