--- a/list-rendering/index.html
+++ b/list-rendering/index.html
@@ -11,11 +11,11 @@
     
     <div v-cloak id="app">
          <!-- v-for directive  -->
-        <ol >
-            <li v-for="bird in birds" v-bind:class='bird'>{{ bird }}</li>
+        <ol>
+            <li  v-for="bird in birds" :key='bird' v-bind:class='bird'>{{ bird }}</li>
         </ol>
         <ul >
-            <li v-bind:class="person" v-for="person in people">{{ person.name + ' ' + person.age }}</li>
+            <li v-bind:class="person" v-for="person in people" :key="person.name">{{ person.name + ' ' + person.age }}</li>
         </ul>
     </div>
 
