transform property values set the reset method work

--- a/perspective-playground-project/index.html
+++ b/perspective-playground-project/index.html
@@ -12,25 +12,25 @@
     <main>
       <section class="settings">
         <div class="settings-container">
-          <label>perspective: 0px;</label>
-          <input type="range" min="0" max="999" />
+          <label>perspective: {{ perspective }}px;</label>
+          <input v-model="perspective" type="range" min="0" max="999" />
 
-          <label>rotateX: {{  rotateX  }}deg; </label>
+          <label>rotateX: {{ rotateX }}deg; </label>
           <input value="{{ rotateX }}" v-model="rotateX"  type="range" min="-180" max="180" />
 
-          <label>rotateY: 0deg; </label>
-          <input type="range" min="-180" max="180" />
+          <label>rotateY: {{ rotateY }}deg; </label>
+          <input v-model="rotateY" type="range" min="-180" max="180" />
 
           <label>rotateZ: {{ rotateZ }}deg; </label>
-          <input type="range" min="-180" max="180" />
+          <input v-model="rotateZ"type="range" min="-180" max="180" />
 
           <button v-on:click.prevent="reset" type="button">Reset</button>
           <button type="button">Copy</button>
         </div>
       </section>
       <section class="output">
-        <div class="box-container">
-          <div v-bind:style="{transform:setRotate}" class="box"></div>
+        <div   class="box-container">
+          <div :style="setBox" class="box"></div>
         </div>
       </section>
     </main>
